--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                             <h1 class="heading-text-background">福春計程車</h1>
                             <p class="heading-text-background">為您提供桃園機場接送、包車旅遊尊爵服務</p>
                             <h3 class="heading-text-background">新車更舒適!</h3>
-                            <h2 class="heading-text-background">新車牌 <span style="color: red;">TAK-067</span></h2>
-                            <a href="#member" class="btn btn-outline btn-xl page-scroll heading-text-background">加入會員!</a>
+                            <h2><span class="heading-text-background" style="font-size:80%" >新車牌</span><span class="heading-text-background2" style="color: red;">TAK-067</span></h2>
+                            <a href="#member" class="btn btn-join btn-xl page-scroll">加入會員!</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         <table cellpadding="0">
                             <tr>
                                 <td valign="top">1.&nbsp;</td>
-                                <td>本車提供wifi無線上網！</td>
+                                <td>本車已更換新車！新車牌<span style="color:red;">TAK-067</span>！<a href="#TaxiTop" class="page-scroll"><span style="color:red;">新燈殼</span></a>！不變的尊爵服務！</td>
                             </tr>
                         </table>
                     </div>
@@ -112,7 +112,7 @@
                         <table cellpadding="0">
                             <tr>
                                 <td valign="top">2.&nbsp;</td>
-                                <td>優惠方案：請看<strong><a href="#latestOffers" class="page-scroll">最新優惠</a></strong></td>
+                                <td>本車提供wifi無線上網！</td>
                             </tr>
                         </table>
                     </div>
@@ -122,7 +122,7 @@
                         <table cellpadding="0">
                             <tr>
                                 <td valign="top">3.&nbsp;</td>
-                                <td>目前僅開放中長途預約叫車(桃園機場或包車旅遊)，<span style="color:red;">不提供臨時叫車服務</span>。</td>
+                                <td>優惠方案：請看<strong><a href="#latestOffers" class="page-scroll"><span style="color:red;">最新優惠</span></a></strong></td>
                             </tr>
                         </table>
                     </div>
@@ -132,10 +132,25 @@
                         <table cellpadding="0">
                             <tr>
                                 <td valign="top">4.&nbsp;</td>
+                                <td>目前僅開放中長途預約叫車(桃園機場或包車旅遊)，<span style="color:red;">不提供臨時叫車服務</span>。</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="radius_frame">
+                        <table cellpadding="0">
+                            <tr>
+                                <td valign="top">5.&nbsp;</td>
                                 <td>出發地點限定於<span style="color:red;">台北地區</span>，造成不便敬請見諒。</td>
                             </tr>
                         </table>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="TaxiTop" class="col-md-12">
+                    <img class="img-responsive img-circle image-responsive" src="img/TaxiTop.jpg" alt="" />
                 </div>
             </div>
         </div>
